finish swagger documentation/configuration
